<resources>
    <string name="app_name">Projekt2</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Kalkulator DMX</string>
    <string name="title_notifications">Chat</string>
    <string name="hundred">0</string>
    <string name="decimal">0</string>
    <string name="units">0</string>
    <string name="addStep">-20</string>
    <string name="decStep">+20</string>
    <string name="textHundreds">0</string>
    <string name="textDec">0</string>
    <string name="textUnits">0</string>
    <string name="decStep2">-20</string>
    <string name="addStep2">+20</string>
    <string name="opis_urz_dzenia">Opis urządzenia</string>
    <string name="nazwa_trybu">Nazwa trybu</string>
    <string name="adres_dmx">Adres DMX</string>
    <string name="nazwa_urz_dzenia">Nazwa urządzenia</string>
    <string name="dodawanie_urz_dzenia">Dodawanie urządzenia</string>
    <string name="zapisz">Zapisz</string>
    <string name="dodaj_atrybut">Dodaj atrybut</string>
    <string name="attributesList">Tutaj pojawią się dodane atrybuty</string>
    <string-array name="attributes">
        <item>Dimmer</item>
        <item>Shutter</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>White</item>
        <item>Amber</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
</resources>