<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fixtureBuilderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="145dp"
            android:gravity="center"
            android:text="@string/dodawanie_urz_dzenia" />

        <LinearLayout
            android:id="@+id/nameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fixtureBuilderTV"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTIBuilder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nazwa_urz_dzenia" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameLL"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressTIBuilder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="3"
                    android:hint="@string/adres_dmx"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/modeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLL"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modeTIBuilder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nazwa_trybu" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressLL"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/channelsTIBuilder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/liczba_kanalow"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="3"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/attributesListLL"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/modeLL"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attrListTV"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/attributesList">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteAttrBtn"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_baseline_delete_forever_24"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAttributeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/attributesListLL"
            android:text="@string/dodaj_atrybut" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveFixtureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buildFixtureButton"
            android:text="@string/zapisz" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buildFixtureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addAttributeButton"
            android:text="@string/eksport" />
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/another_teal"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>